syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";

message MsgInsertReq {
  RequestHeader header = 1;
}

message MsgInsertResp {
  ResponseHeader header = 1;
}

service msgService {
  //MsgInsert 插入消息
  rpc MsgInsert(MsgInsertReq) returns (MsgInsertResp);
}
